# SimpleSearchEngine

./: .env  .gitignore  README.md
crawler_js/: crawl.js  crawl.test.js  jest.config.js  main.js  package-lock.json  package.json  report.js  report.test.js
crawler_rs/: Cargo.toml  log.txt
crawler_rs/src/: args_parser.rs  main.rs
scraped_raw_htmls/: Wikipedia.html
