[package]
name = "crawler_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
dotenv = "0.15.0"
log2 = "0.2.1"
reqwest = { version="0.12.15", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version = "1.44.2", features = ["fs", "rt", "rt-multi-thread", "macros"] }
